<resources>
    <string name="app_name">Language Learning App</string>
    <string name="username_input">Mary Jones</string>
    <string name="login_button">Login</string>
    <string name="email_input">example@example.com</string>
    <string name="password_input">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_button">Sign Up</string>
    <string name="learner_button">Learner</string>
    <string name="educator_button">Educator</string>
    <string name="reset_password">Reset!</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="return_button">Return</string>
    <string name="home_title_learner">Start Learning!</string>
    <string name="start_button">Get Started!</string>
    <string name="home_title_educator">Hello!</string>
    <string name="select_language">Your Language:</string>
    <string name="create_exercise">Create</string>
    <string name="practice">Practice</string>
    <string name="practice_grammar">Grammar</string>
    <string name="practice_vocab">Vocabulary</string>
    <string name="return_home">Home</string>
    <string name="select_topic">TOPIC</string>
    <string name="select_type">EXERCISE TYPE</string>
    <string name="MC_switch">Multiple Choice</string>
    <string name="choice_A">A</string>
    <string name="choice_B">B</string>
    <string name="choice_C">C</string>
    <string name="choice_D">D</string>
    <string name="question_input">Question</string>
    <string name="answer_input">Answer</string>
    <string name="create_new_topic">Create New Topic:</string>
    <string name="create_new_type">Create New Type:</string>
    <string name="grammar_conjugation_practice">Practice Conjugation</string>
    <string name="grammar_custom_practice">Custom Exercises</string>
    <string name="time_practice_mode">Practice by Time (MIN)</string>
    <string name="numberCorrect_practice_mode">Practice by Number of Correct Answers</string>
    <string name="numberQuestions_practice_mode">Practice by Number of Questions</string>
    <string name="start_practice">START</string>
</resources>