<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authenticationActivities.LoginActivity" android:background="#00FFFFFF">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/registerErrorTextView"
            android:fontFamily="@font/dm_sans" android:textStyle="bold"
            android:textColor="#E91E1E"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center" android:singleLine="false"
            android:text="..." android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/textView6"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="243dp"
            android:layout_height="74dp" android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp"
            app:layout_constraintHorizontal_bias="0.468" android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="47dp" app:srcCompat="@android:drawable/ic_menu_edit"
                android:id="@+id/imageView" tools:srcCompat="@drawable/haticon"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView10" android:textAllCaps="false"
                android:textAlignment="center" android:fontFamily="@font/dm_sans" android:textStyle="bold"/>
    </LinearLayout>
    <TextView
            android:text="Sign Up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textStyle="bold" android:textSize="34sp"
            android:textColor="@color/black" android:shadowColor="#000000"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
            android:fontFamily="@font/dm_sans" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            android:layout_marginBottom="20dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="310dp"
            android:layout_height="250dp" android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/linearLayout"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView4">
        <TextView
                android:text="Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:textStyle="bold"
                android:textColor="#F85F6A" android:fontFamily="@font/dm_sans"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/registerUsername" android:hint="@string/username_input"
                android:fontFamily="@font/dm_sans"/>
        <TextView
                android:text="Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:textStyle="bold"
                android:textColor="#F85F6A" android:fontFamily="@font/dm_sans"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/registerEmail"
                android:hint="@string/email_input" android:fontFamily="@font/dm_sans"/>
        <TextView
                android:text="Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView8" android:textStyle="bold"
                android:textColor="#F85F6A" android:fontFamily="@font/dm_sans"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/registerPassword"
                android:hint="@string/password_input" android:fontFamily="@font/dm_sans"/>
        <TextView
                android:text="Confirm Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView9" android:textStyle="bold"
                android:textColor="#F85F6A" android:fontFamily="@font/dm_sans"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/confirmPassword" android:hint="@string/confirm_password_input"/>
    </LinearLayout>
    <TextView
            android:text="Are you a Learner or an Educator?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:textStyle="bold" android:fontFamily="@font/dm_sans"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/registerErrorTextView"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="286dp"
            android:layout_height="99dp"
            android:id="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
            app:layout_constraintHorizontal_bias="0.787" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6">
        <ToggleButton
                android:text="ToggleButton"
                android:layout_width="match_parent"
                android:layout_height="95dp" android:id="@+id/userTypeToggleButton" android:layout_weight="1"
                android:textOff="@string/learner_button" android:textOn="@string/educator_button"
                android:fontFamily="@font/dm_sans"/>
    </LinearLayout>
    <Button
            android:layout_width="280dp"
            android:layout_height="48dp" android:id="@+id/registerButton"
            android:background="@drawable/btn_bg"
            android:text="@string/register_button"
            app:iconTint="#FFC107" android:textColor="#FFFFFF"
            android:textStyle="bold" android:fontFamily="@font/dm_sans"
            android:clickable="true" tools:ignore="OnClick"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp" android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/returnButton"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/return_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold" android:textAllCaps="false"
            android:fontFamily="@font/dm_sans"
            android:text="@string/return_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" android:id="@+id/returnButton"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/return_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold" android:textAllCaps="false"
            android:fontFamily="@font/dm_sans"
            android:text="@string/login_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="260dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/registerLoginButton" android:layout_marginEnd="45dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="32dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/registerButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>