<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".learner.LearnerHomeActivity">

    <TextView
            android:text="TextView"
            android:layout_width="331dp"
            android:layout_height="47dp"
            android:id="@+id/learnerHomeTitle"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            tools:text="@string/home_title_learner"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="34sp" android:textStyle="bold"
            android:fontFamily="@font/dm_sans" android:textColor="@color/black" android:textAlignment="viewStart"
            android:layout_marginEnd="30dp"/>
    <TextView
            android:text="@string/practice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/learnerHomeTitle2"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/practice"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="24sp" android:textStyle="bold"
            android:fontFamily="@font/dm_sans" android:textColor="@color/black" android:textAlignment="viewStart"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/createExerciseButton"/>
    <TextView
            android:text="Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/learnerCurrentDateDisplay"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/learnerHomeTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" android:fontFamily="@font/dm_sans" android:textSize="16sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="338dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/learnerCurrentDateDisplay"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp" android:id="@+id/linearLayout5">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#020202" android:textSize="16sp" tools:text="@string/select_language"
                android:textAlignment="viewStart" android:textStyle="bold" android:id="@+id/selectLanguage"
                android:text="@string/select_language" android:fontFamily="@font/dm_sans"/>
        <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
        />
    </LinearLayout>
    <TextView
            android:text="Note: If you change your language, you must restart the application and login in again."
            android:layout_width="334dp"
            android:layout_height="35dp" android:id="@+id/textView13"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            tools:text="Note: If you change your language, you must restart the application and login in again."
            android:textColor="#D81B60" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
            android:textSize="8sp" android:textStyle="bold|italic" android:fontFamily="@font/dm_sans"/>
    <Button
            android:text="@string/create_exercise"
            android:layout_width="229dp"
            android:layout_height="79dp" android:id="@+id/createExerciseButton"
            android:background="@drawable/return_btn"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/dm_sans" android:textStyle="bold"
            android:textSize="20sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="320dp"
            android:layout_height="108dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/learnerHomeTitle2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp">
        <Button
                android:text="@string/practice_grammar"
                android:layout_width="wrap_content"
                android:background="@drawable/blue_btn"
                android:layout_margin="5sp"
                android:layout_height="match_parent" android:id="@+id/grammarPracticeButton" android:layout_weight="1"
                android:fontFamily="@font/dm_sans" android:textStyle="bold"/>

        <Button
                android:text="@string/practice_vocab"
                android:layout_width="wrap_content"
                android:background="@drawable/yellow_btn"
                android:layout_margin="5sp"
                android:layout_height="match_parent" android:id="@+id/vocabPracticeButton" android:layout_weight="1"
                android:fontFamily="@font/dm_sans" android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>