<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".create.CreateGrammarExercise">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="359dp"
            android:layout_height="72dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/MCSwitch" android:id="@+id/linearLayout9">
        <TextView
                android:text="@string/question_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textAlignment="center"
                android:textStyle="bold" android:textSize="20sp" android:fontFamily="@font/dm_sans"
                android:textColor="#000000" android:id="@+id/questionText"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/questionTextField" android:textSize="10sp" android:fontFamily="@font/dm_sans"
                android:hint="Question"/>
    </LinearLayout>
    <Button
            android:layout_width="112dp"
            android:layout_height="47dp"
            android:background="@drawable/return_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold" android:textAllCaps="false"
            android:fontFamily="@font/dm_sans"
            android:text="@string/return_home"
            android:id="@+id/grammarReturnHomeButton"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>
    <Button
            android:layout_width="241dp"
            android:layout_height="50dp"
            android:background="@drawable/blue_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold" android:textAllCaps="false"
            android:fontFamily="@font/dm_sans"
            android:text="@string/create_exercise"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="76dp" android:id="@+id/createButton"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"
            android:layout_marginEnd="76dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="51dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout8"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="360dp"
            android:layout_height="206dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/grammarReturnHomeButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp" android:id="@+id/linearLayout6">
        <TextView
                android:text="@string/select_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView11" android:fontFamily="@font/dm_sans"
                android:textSize="14sp" android:textStyle="bold" android:textColor="#000000"
                android:textAlignment="center"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:id="@+id/topicSpinner"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/create_new_topic"
                    android:layout_width="11dp"
                    android:layout_height="wrap_content" android:id="@+id/textView14" android:layout_weight="1"
                    android:textSize="12sp" android:textAlignment="center" android:textColor="#00ACC1"
                    android:fontFamily="@font/dm_sans" android:textStyle="bold"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_weight="1"
                    android:fontFamily="@font/dm_sans" android:textSize="12sp" android:textColor="#000000"
                    android:id="@+id/newTopicTextField" android:hint="Ex. Past Tense"/>
        </LinearLayout>
        <TextView
                android:text="@string/select_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView12" android:fontFamily="@font/dm_sans"
                android:textSize="14sp" android:textStyle="bold" android:textColor="#000000"
                android:textAlignment="center"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:id="@+id/typeSpinner"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="46dp">
            <TextView
                    android:text="@string/create_new_type"
                    android:layout_width="4dp"
                    android:layout_height="wrap_content" android:id="@+id/textView16" android:layout_weight="1"
                    android:textStyle="bold" android:textSize="12sp" android:fontFamily="@font/dm_sans"
                    android:textAlignment="center" android:textColor="#00ACC1"/>
            <EditText
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_weight="1" android:textSize="12sp"
                    android:fontFamily="@font/dm_sans" android:textColor="#000000" android:id="@+id/newTypeTextField"
                    android:hint="Ex. Fill-in-the-blank"/>
        </LinearLayout>
    </LinearLayout>
    <Switch
            android:text="@string/MC_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MCSwitch"
            android:fontFamily="@font/dm_sans" android:textStyle="bold" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" android:layout_marginEnd="117dp"
            app:layout_constraintEnd_toEndOf="parent" android:checked="true"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="360dp"
            android:layout_height="110dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/multipleChoicelinearLayout" android:id="@+id/linearLayout8">
        <TextView
                android:text="@string/answer_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textAlignment="center"
                android:textStyle="bold" android:textSize="20sp" android:fontFamily="@font/dm_sans"
                android:textColor="#000000" android:id="@+id/answerText"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:fontFamily="@font/dm_sans" android:textSize="10sp"
                android:textColor="#000000" android:id="@+id/answerTextField" android:hint="Answer"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <CheckBox
                    android:text="@string/choice_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/AcheckBox" android:layout_weight="1"
                    android:fontFamily="@font/dm_sans" android:textSize="16sp"/>
            <CheckBox
                    android:text="@string/choice_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/BcheckBox" android:layout_weight="1"
                    android:fontFamily="@font/dm_sans" android:textSize="16sp"/>
            <CheckBox
                    android:text="@string/choice_C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/CcheckBox" android:layout_weight="1"
                    android:fontFamily="@font/dm_sans" android:textSize="16sp"/>
            <CheckBox
                    android:text="@string/choice_D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:fontFamily="@font/dm_sans" android:textSize="16sp" android:id="@+id/DcheckBox"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="364dp"
            android:layout_height="135dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/multipleChoicelinearLayout"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/choice_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/choiceAText" android:layout_weight="1"
                    android:textAlignment="center" android:textSize="16sp" android:textStyle="bold"
                    android:textColor="#FFFFFF" android:background="@drawable/blue_btn"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/choiceATextField" android:layout_weight="1" android:fontFamily="@font/dm_sans"
                    android:textSize="10sp" android:textColor="#000000" android:hint="Description for Choice A"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/choice_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/choiceBText" android:layout_weight="1"
                    android:textSize="16sp" android:textAlignment="center" android:textStyle="bold"
                    android:textColor="#FFFFFF" android:background="@drawable/blue_btn"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/choiceBTextField" android:layout_weight="1" android:fontFamily="@font/dm_sans"
                    android:textSize="10sp" android:textColor="#000000" android:hint="Description for Choice B"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/choice_C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/choiceCText" android:layout_weight="1"
                    android:textSize="16sp" android:textAlignment="center" android:textStyle="bold"
                    android:textColor="#FFFFFF" android:background="@drawable/blue_btn"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/choiceCTextField" android:layout_weight="1" android:fontFamily="@font/dm_sans"
                    android:textSize="10sp" android:textColor="#000000" android:hint="Description for Choice C"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/choice_D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/choiceDText" android:layout_weight="1"
                    android:textSize="16sp" android:textAlignment="center" android:textStyle="bold"
                    android:textColor="#FFFFFF" android:background="@drawable/blue_btn"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/choiceDTextField" android:layout_weight="1" android:fontFamily="@font/dm_sans"
                    android:textSize="10sp" android:textColor="#000000" android:hint="Description for Choice D"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/multipleChoicelinearLayout" android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout8" android:textColor="#E53935"
            android:textAlignment="center" android:fontFamily="@font/dm_sans" android:textSize="14sp"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:id="@+id/createErrorTextView"/>
</androidx.constraintlayout.widget.ConstraintLayout>